feat(deps): update package dependencies and improve Dockerfile for backend
- Added new TypeScript type definitions for various packages including `@types/cors`, `@types/lodash`, `@types/luxon`, and `@types/node`.
- Updated the Dockerfile to enhance the build process by copying necessary files more efficiently and ensuring the correct Prisma schema is included.
- Removed the `sync-engine` package-lock.json as it is no longer needed.

These changes improve type safety and streamline the backend build process.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,30 +1,30 @@
-# ================================================================
-# CoomÜnity Backend NestJS - Multi-stage Dockerfile CORREGIDO
-# Optimizado para producción con build separado
-# ================================================================
+# =================================================================
+# CoomÜnity Backend - Dockerfile v4 (Control Explícito de Prisma)
+# =================================================================
 
-# ================================================================
-# Etapa 1: Builder - Construir la aplicación (usando lockfile raíz)
-# ================================================================
-FROM node:lts-alpine AS builder
+# Etapa 1: Builder
+FROM node:20-alpine AS builder
+
+# 1. Herramientas base
+RUN apk add --no-cache python3 make g++
 
 WORKDIR /usr/src/app
 
-# Copia los archivos de definición de paquetes de la raíz y del backend
+# 2. Copia manifiestos y schema
 COPY package.json package-lock.json* ./
 COPY backend/package.json ./backend/
-
-# Instala dependencias del monorepo
-RUN npm ci --legacy-peer-deps
-
-# Copia el código fuente del backend y el schema de Prisma
-COPY backend/. ./backend/
 COPY prisma/. ./prisma/
 
-# Genera Prisma Client
-RUN cd backend && npx prisma generate --schema=../prisma/schema.prisma
+# 3. Instala dependencias SIN ejecutar scripts automáticos
+RUN npm ci --omit=dev --legacy-peer-deps --ignore-scripts
 
-# Build del backend
+# 4. Copia el código fuente
+COPY backend/. ./backend/
+
+# 5. AHORA, ejecuta Prisma Generate manualmente con la ruta explícita
+RUN npx prisma generate --schema=./prisma/schema.prisma
+
+# 6. Build del backend
 RUN npm run build --workspace=backend
 
 # ================================================================
@@ -34,11 +34,12 @@ FROM node:lts-alpine
 
 WORKDIR /usr/src/app
 
+# Copia solo los artefactos necesarios desde el builder
 COPY --from=builder /usr/src/app/node_modules ./node_modules
 COPY package.json ./
-COPY --from=builder /usr/src/app/backend/dist ./dist
-COPY --from=builder /usr/src/app/backend/node_modules/.prisma ./node_modules/.prisma
-COPY prisma ./prisma
+COPY --from=builder /usr/src/app/dist ./dist
+COPY --from=builder /usr/src/app/node_modules/.prisma ./node_modules/.prisma
+COPY --from=builder /usr/src/app/prisma ./prisma
 
 EXPOSE 3002
 
