--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "start": "npm run start:prod --workspace=backend"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "schema": "prisma/schema.prisma"
   },
   "dependencies": {
     "@builder.io/dev-tools": "latest",
@@ -137,10 +138,18 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/lodash": "^4.17.20",
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^24.0.10",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/superagent": "^8.1.9",
+    "@types/supertest": "^6.0.3",
+    "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "@vitejs/plugin-react": "^4.3.4",
