--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -124,7 +124,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.5.3",
+    "typescript": "4.9.5",
     "use-sync-external-store": "^1.5.0",
     "vite": "^6.3.5",
     "vite-plugin-node-polyfills": "^0.22.0",
