--- a/Demo/package.json
+++ b/Demo/package.json
@@ -33,7 +33,7 @@
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "4.9.5"
   },
   "keywords": [
     "coomunity",
