--- a/backend/package.json
+++ b/backend/package.json
@@ -76,7 +76,7 @@
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
+    "typescript": "4.9.5",
     "winston": "^3.15.0"
   },
   "devDependencies": {
