--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -19,7 +19,7 @@
   "author": "CoomÜnity Guardianes",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "4.9.5"
   },
   "files": [
     "dist"
