--- a/packages/sync-engine/package.json
+++ b/packages/sync-engine/package.json
@@ -20,7 +20,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "4.9.5"
   },
   "dependencies": {
     "axios": "^1.7.2",
