chore(deps): update TypeScript version to ^4.9.5 and adjust Dockerfile for improved build process
- Updated TypeScript dependency in package.json and package-lock.json to use the caret versioning (^4.9.5) for better compatibility with future updates.
- Modified the DATABASE_URL in the backend environment file to connect to the Docker host.
- Enhanced the Dockerfile by refining the build stages, ensuring all necessary files are copied, and adjusting the command for Prisma migrations.

These changes improve the maintainability and clarity of the project setup while ensuring compatibility with future TypeScript updates.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,63 +1,65 @@
 # =================================================================
-# CoomÜnity Backend - DECRETO FINAL DE CONSTRUCCIÓN v7 (CONTROL EXPLÍCITO PRISMA)
+# CoomÜnity Backend - DECRETO FINAL v13 (Build Tools Fix)
 # =================================================================
 
 # -----------------
 # ETAPA 1: BUILDER
-# Un taller con TODAS las herramientas, bajo control explícito.
 # -----------------
 FROM node:20-alpine AS builder
 
 WORKDIR /usr/src/app
 
-# 1. Herramientas base.
+# 1. Herramientas base
 RUN apk add --no-cache python3 make g++
 
-# 2. Copia manifiestos y schema.
-COPY package.json package-lock.json* ./
+# 2. Copia manifiestos y configuraciones BASE
+COPY package*.json ./
 COPY backend/package.json ./backend/
-COPY prisma/. ./prisma/
 
-# 3. Instala TODAS las dependencias, pero ignora scripts automáticos.
-RUN npm install --legacy-peer-deps --ignore-scripts
+# 3. Copia archivos de Prisma a backend/prisma
+COPY backend/prisma ./backend/prisma/
 
-# 4. Copia TODO el código fuente del backend.
+# 4. Instala dependencias BASE (sin ejecutar scripts)
+RUN npm ci --ignore-scripts --legacy-peer-deps
+
+# 5. Copia configuraciones de TypeScript
+COPY backend/nest-cli.json ./backend/
+COPY backend/tsconfig*.json ./backend/
+
+# 6. Copia código fuente
 COPY backend/src/. ./backend/src/
 
-# 5. ¡NUEVA DIRECTIVA! Copia los archivos de configuración del backend.
-#    Son necesarios para que `nest build` funcione correctamente.
-COPY backend/tsconfig.json ./backend/
-COPY backend/tsconfig.build.json ./backend/
-COPY backend/nest-cli.json ./backend/
-
-# 6. Genera Prisma Client manualmente (control explícito).
-RUN npx prisma generate --schema=./prisma/schema.prisma
-
-# 7. Construye la aplicación.
-RUN npm run build --workspace=backend
-
+# 7. Genera cliente Prisma y construye
+WORKDIR /usr/src/app/backend
+RUN npx prisma generate
+RUN npm run build
 
 # -----------------
 # ETAPA 2: PRODUCTION
-# El templo final, puro y optimizado.
 # -----------------
 FROM node:lts-alpine
 
 WORKDIR /usr/src/app
 
-# 1. Copia manifiestos.
-COPY package.json ./
-COPY --from=builder /usr/src/app/backend/package.json ./backend/package.json
+# 1. Instala herramientas de compilación
+RUN apk add --no-cache python3 make g++ && \
+    npm install -g node-gyp
 
-# 2. Instala dependencias de PRODUCCIÓN.
-RUN npm ci --omit=dev --legacy-peer-deps
+# 2. Copia manifiestos completos
+COPY package*.json ./
+COPY --from=builder /usr/src/app/backend/package.json ./backend/
 
-# 3. Copia artefactos compilados desde el Builder.
+# 3. Copia Prisma schema y migrations
+COPY --from=builder /usr/src/app/backend/prisma ./backend/prisma
+
+# 4. Instala dependencias de PRODUCCIÓN
+RUN npm install --omit=dev --legacy-peer-deps
+
+# 5. Copia artefactos compilados
 COPY --from=builder /usr/src/app/backend/dist ./dist
-COPY --from=builder /usr/src/app/prisma ./prisma
 
 # Expone el puerto
 EXPOSE 3002
 
-# Comando final para migrar, sembrar y ejecutar.
-CMD ["sh", "-c", "npx prisma migrate deploy && npm run db:seed --workspace=backend && node dist/main.js"]
+# Comando final con Prisma migrate
+CMD ["sh", "-c", "cd backend && npx prisma migrate deploy && npm run db:seed --workspace=backend && node ../dist/main.js"]
