--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
     "react-dom": "18.3.1",
     "tsx": "^4.19.4",
     "turbo": "^2.5.4",
-    "typescript": "4.9.5",
+    "typescript": "^4.9.5",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vite-plugin-node-polyfills": "^0.23.0",
