--- a/package.json
+++ b/package.json
@@ -155,17 +155,19 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/pretty-format": "^2.1.9",
     "es-module-lexer": "^1.7.0",
-    "eslint": "^8.35.0",
+    "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "glob": "^11.0.3",
     "globals": "^15.15.0",
     "happy-dom": "^17.4.7",
     "prettier": "^3.4.2",
     "prisma": "^5.22.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "rimraf": "^6.0.1",
     "tsx": "^4.19.4",
     "turbo": "^2.5.4",
     "typescript": "^4.9.5",
