--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -52,4 +52,4 @@ COPY --from=builder /usr/src/app/prisma ./prisma
 EXPOSE 3002
 
 # Comando final para migrar, sembrar y ejecutar.
-CMD ["sh", "-c", "npx prisma migrate deploy && npm run db:seed --workspace=backend && node dist/main.js"]
+CMD ["sh", "-c", "npx prisma migrate deploy && cd backend && npm run db:seed && cd .. && node dist/main.js"]
