refactor(tsconfig): streamline TypeScript configuration for SuperApp
- Consolidated library definitions in tsconfig.json for improved readability.
- Added exclusions for test files to enhance the build process and prevent unnecessary file inclusion.

These changes optimize the TypeScript setup for the SuperApp, ensuring a cleaner and more efficient development experience.

--- a/Demo/apps/superapp-unified/tsconfig.json
+++ b/Demo/apps/superapp-unified/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "types": ["vite/client"],
     "module": "ESNext",
     "skipLibCheck": true,
@@ -23,24 +19,12 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@/components/*": [
-        "./src/components/*"
-      ],
-      "@/hooks/*": [
-        "./src/hooks/*"
-      ],
-      "@/lib/*": [
-        "./src/lib/*"
-      ],
-      "@/stores/*": [
-        "./src/stores/*"
-      ],
-      "@/types/*": [
-        "./src/types/*"
-      ]
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/hooks/*": ["./src/hooks/*"],
+      "@/lib/*": ["./src/lib/*"],
+      "@/stores/*": ["./src/stores/*"],
+      "@/types/*": ["./src/types/*"]
     }
   },
   "include": [
@@ -66,6 +50,10 @@
     "temp",
     "_temp",
     "_temp_frontend_src_files",
-    "docs"
+    "docs",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "**/*.test.tsx",
+    "**/*.spec.tsx"
   ]
 }
