fix(prisma): Add schema path to package.json for Prisma configuration
- Updated the Prisma configuration in package.json to include the schema path, ensuring proper reference for database schema management.

This change enhances the clarity and functionality of the Prisma setup in the backend.

--- a/backend/package.json
+++ b/backend/package.json
@@ -125,6 +125,7 @@
     }
   },
   "prisma": {
-    "seed": "ts-node src/prisma/seed.ts"
+    "seed": "ts-node src/prisma/seed.ts",
+    "schema": "backend/prisma/schema.prisma"
   }
 }
