--- a/backend/package.json
+++ b/backend/package.json
@@ -126,6 +126,6 @@
   },
   "prisma": {
     "seed": "ts-node src/prisma/seed.ts",
-    "schema": "backend/prisma/schema.prisma"
+    "schema": "prisma/schema.prisma"
   }
 }
