--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
+    "jest": "^30.0.4",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "nostr-tools": "^2.13.0",
@@ -125,6 +126,7 @@
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
     "sonner": "^2.0.3",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "use-debounce": "^10.0.5",
     "winston": "^3.17.0",
@@ -172,7 +174,7 @@
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite-plugin-pwa": "^1.0.1"
   },
   "peerDependencies": {
     "react": "18.3.1",
