--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -145,7 +145,9 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/pretty-format": "^2.1.9",
+    "@vitest/ui": "^3.2.4",
     "es-module-lexer": "^1.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -155,6 +157,7 @@
     "globals": "^16.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tinyrainbow": "^1.2.0",
+    "vitest": "^3.2.4",
     "workbox-window": "^7.3.0"
   },
   "peerDependencies": {
