feat(docker): Install NestJS CLI globally in Dockerfile for build process
- Added a step to install the NestJS CLI globally, which is necessary for the build process in the Docker environment. This enhancement ensures that the build can utilize NestJS CLI commands effectively, improving the overall development workflow.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,6 +19,9 @@ COPY package*.json ./
 # 4. Instalar TODAS las dependencias (incluyendo devDependencies)
 RUN npm install --legacy-peer-deps
 
+# 4.1 Instalar NestJS CLI globalmente (necesario para el build)
+RUN npm install -g @nestjs/cli
+
 # 5. Copiar el resto del código fuente
 COPY . .
 
