--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main.js",
+    "start:prod": "prisma generate && prisma migrate deploy && node dist/main.js",
     "deploy": "npx prisma migrate deploy && npx prisma db seed",
     "lint": "eslint . --fix",
     "lint:check": "eslint . --max-warnings 0",
