--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,28 +12,29 @@ services:
   backend:
     build:
       context: .
-      dockerfile: ./backend/Dockerfile.simple
+      dockerfile: Dockerfile
+      target: production
     container_name: coomunity-backend-prod
     ports:
-      - "3002:3002"
+      - '3002:3002'
     environment:
       # Variables de entorno de producción
       NODE_ENV: production
       PORT: 3002
-      
+
       # Base de datos
       DATABASE_URL: postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
-      
+
       # JWT y autenticación
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-7d}
-      
+
       # Redis
       REDIS_URL: redis://redis:6379
-      
+
       # CORS
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-http://localhost:3000,http://localhost:3001}
-      
+
       # Otras configuraciones
       BCRYPT_ROUNDS: ${BCRYPT_ROUNDS:-12}
       APP_NAME: CoomÜnity
@@ -49,14 +50,14 @@ services:
       - backend_uploads:/app/uploads
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3002/health"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:3002/health']
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 60s
     labels:
-      - "com.coomunity.service=backend"
-      - "com.coomunity.environment=production"
+      - 'com.coomunity.service=backend'
+      - 'com.coomunity.environment=production'
 
   # ================================================================
   # SuperApp Frontend - Aplicación Principal de Usuarios
@@ -71,7 +72,7 @@ services:
         VITE_APP_ENV: production
     container_name: coomunity-superapp-prod
     ports:
-      - "3001:80"
+      - '3001:80'
     environment:
       NODE_ENV: production
     depends_on:
@@ -81,14 +82,14 @@ services:
       - coomunity-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:80/']
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 30s
     labels:
-      - "com.coomunity.service=superapp"
-      - "com.coomunity.environment=production"
+      - 'com.coomunity.service=superapp'
+      - 'com.coomunity.environment=production'
 
   # ================================================================
   # Gamifier Admin Frontend - Panel de Administración
@@ -103,7 +104,7 @@ services:
         VITE_APP_ENV: production
     container_name: coomunity-admin-prod
     ports:
-      - "3000:80"
+      - '3000:80'
     environment:
       NODE_ENV: production
     depends_on:
@@ -113,14 +114,14 @@ services:
       - coomunity-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:80/']
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 30s
     labels:
-      - "com.coomunity.service=admin"
-      - "com.coomunity.environment=production"
+      - 'com.coomunity.service=admin'
+      - 'com.coomunity.environment=production'
 
   # ================================================================
   # PostgreSQL - Base de Datos Principal
@@ -129,12 +130,12 @@ services:
     image: postgres:15-alpine
     container_name: coomunity-postgres-prod
     ports:
-      - "5432:5432"
+      - '5432:5432'
     environment:
       POSTGRES_DB: ${DB_NAME:-coomunity_prod}
       POSTGRES_USER: ${DB_USER:-coomunity_user}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
+      POSTGRES_INITDB_ARGS: '--auth-host=scram-sha-256'
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -143,14 +144,18 @@ services:
       - coomunity-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-coomunity_user} -d ${DB_NAME:-coomunity_prod}"]
+      test:
+        [
+          'CMD-SHELL',
+          'pg_isready -U ${DB_USER:-coomunity_user} -d ${DB_NAME:-coomunity_prod}',
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 30s
     labels:
-      - "com.coomunity.service=postgres"
-      - "com.coomunity.environment=production"
+      - 'com.coomunity.service=postgres'
+      - 'com.coomunity.environment=production'
 
   # ================================================================
   # Redis - Cache y Sessions
@@ -159,7 +164,7 @@ services:
     image: redis:7-alpine
     container_name: coomunity-redis-prod
     ports:
-      - "6379:6379"
+      - '6379:6379'
     command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     environment:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
@@ -169,13 +174,21 @@ services:
       - coomunity-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "--no-auth-warning", "auth", "${REDIS_PASSWORD}", "ping"]
+      test:
+        [
+          'CMD',
+          'redis-cli',
+          '--no-auth-warning',
+          'auth',
+          '${REDIS_PASSWORD}',
+          'ping',
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
     labels:
-      - "com.coomunity.service=redis"
-      - "com.coomunity.environment=production"
+      - 'com.coomunity.service=redis'
+      - 'com.coomunity.environment=production'
 
   # ================================================================
   # Nginx Reverse Proxy (Opcional)
@@ -184,8 +197,8 @@ services:
     image: nginx:alpine
     container_name: coomunity-nginx-prod
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/ssl:/etc/nginx/ssl
@@ -199,8 +212,8 @@ services:
     profiles:
       - proxy
     labels:
-      - "com.coomunity.service=nginx"
-      - "com.coomunity.environment=production"
+      - 'com.coomunity.service=nginx'
+      - 'com.coomunity.environment=production'
 
   # ================================================================
   # Prometheus - Monitoring (Opcional)
@@ -209,7 +222,7 @@ services:
     image: prom/prometheus:latest
     container_name: coomunity-prometheus-prod
     ports:
-      - "9090:9090"
+      - '9090:9090'
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
@@ -226,8 +239,8 @@ services:
     profiles:
       - monitoring
     labels:
-      - "com.coomunity.service=prometheus"
-      - "com.coomunity.environment=production"
+      - 'com.coomunity.service=prometheus'
+      - 'com.coomunity.environment=production'
 
   # ================================================================
   # Grafana - Dashboards (Opcional)
@@ -236,7 +249,7 @@ services:
     image: grafana/grafana:latest
     container_name: coomunity-grafana-prod
     ports:
-      - "3003:3000"
+      - '3003:3000'
     environment:
       GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD:-admin}
     volumes:
@@ -250,8 +263,8 @@ services:
     profiles:
       - monitoring
     labels:
-      - "com.coomunity.service=grafana"
-      - "com.coomunity.environment=production"
+      - 'com.coomunity.service=grafana'
+      - 'com.coomunity.environment=production'
 
 # ================================================================
 # Networks
@@ -274,4 +287,4 @@ volumes:
   prometheus_data:
     name: coomunity-prometheus-data
   grafana_data:
-    name: coomunity-grafana-data 
+    name: coomunity-grafana-data
