--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gamifier",
+  "name": "coomunity-monorepo",
+  "version": "1.0.0",
+  "description": "CoomÜnity Global Platform - Monorepo completo",
   "private": true,
-  "version": "0.0.0",
-  "packageManager": "npm@10.0.0",
-  "engines": {
-    "node": "20.x"
-  },
+  "license": "MIT",
+  "author": "CoomÜnity Team",
+  "main": "backend/dist/main.js",
   "workspaces": [
     "backend",
     "Demo/apps/*",
@@ -13,171 +13,97 @@
   ],
   "scripts": {
     "dev": "turbo run dev",
-    "dev:backend": "npm run dev --workspace=backend",
-    "dev:frontend": "turbo run dev",
-    "dev:superapp": "npm run dev --workspace=coomunity-superapp",
-    "dev:admin": "npm run dev --workspace=@coomunity/admin-frontend",
-    "dev:guardians": "npm run dev --workspace=guardians-portal",
-    "dev:fullstack": "./scripts/start-all.sh",
-    "dev:builder": "cd Demo/apps/superapp-unified && npx builder.io@latest launch",
-    "dev:smart": "./scripts/dev-port-manager.sh",
-    "dev:superapp-only": "./scripts/dev-port-manager.sh superapp",
-    "dev:admin-only": "./scripts/dev-port-manager.sh admin",
-    "dev:backend-only": "./scripts/dev-port-manager.sh backend",
-    "dev:both-frontends": "./scripts/dev-port-manager.sh both-frontends",
-    "port:status": "./scripts/dev-port-manager.sh status",
-    "port:clean": "./scripts/dev-port-manager.sh clean",
-    "start:all": "./scripts/start-all.sh",
-    "stop:all": "pkill -f 'vite|npm run dev|tsx' 2>/dev/null || true",
-    "preflight": "./scripts/pre-flight-check.sh",
-    "preflight:quick": "./preflight",
     "build": "turbo run build",
-    "lint": "turbo run lint",
     "test": "turbo run test",
-    "test:e2e": "npm --filter=coomunity-superapp test:e2e",
-    "test:e2e:backend": "npm test --workspace=backend --",
-    "test:e2e:ci": "npm --filter=coomunity-superapp test:e2e",
-    "test:e2e:report": "npm --filter=coomunity-superapp test:e2e:report",
-    "clean-vite-cache": "rm -rf node_modules/.vite",
-    "clean:backend": "rm -rf dist",
-    "clean:processes": "npm run stop:all",
-    "db:seed": "npm run db:seed --workspace=backend",
-    "db:reset": "npm run db:reset --workspace=backend",
-    "start:backend": "node dist/main.js",
-    "start:backend:dev": "cd backend && npm run start:dev",
-    "start:backend:prod": "npm run clean:backend && npm run build:backend && node dist/main.js",
-    "start:backend:compiled": "npm run build:backend && cp -r backend/src/generated dist/ && node dist/main.js",
-    "build:backend": "tsc -p config/json/tsconfig.backend.json",
-    "mock-cleanup-agent": "node scripts/mock-cleanup-background-agent.js",
-    "mock-cleanup-dispatch": "node scripts/slack-mock-cleanup-dispatcher.js",
-    "dm": "./scripts/dev-manager.sh",
-    "dm:check": "./scripts/dev-manager.sh check",
-    "dm:clean": "./scripts/dev-manager.sh clean",
-    "dm:start": "./scripts/dev-manager.sh start all",
-    "dm:backend": "./scripts/dev-manager.sh start backend",
-    "dm:superapp": "./scripts/dev-manager.sh start superapp",
-    "dm:status": "./scripts/dev-manager.sh status",
-    "dm:test": "./scripts/dev-manager.sh test",
-    "dm:open": "./scripts/dev-manager.sh open",
-    "invoke:guardianes:marketplace": "./scripts/invoke-guardian-marketplace.sh",
-    "stop:guardianes": "source .guardian-pids 2>/dev/null && kill $BACKEND_PID $FRONTEND_PID 2>/dev/null || pkill -f 'npm run dev'",
-    "start": "npm run start:prod --workspace=backend"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts",
-    "schema": "prisma/schema.prisma"
+    "lint": "turbo run lint",
+    "type-check": "turbo run type-check",
+    "start:prod": "prisma generate && prisma migrate deploy && node backend/dist/main.js",
+    "docker:build": "./scripts/docker-build.sh",
+    "docker:build:backend": "docker build -t coomunity/backend:latest -f Dockerfile --target production .",
+    "docker:build:dev": "docker build -t coomunity/backend:dev -f Dockerfile --target builder .",
+    "docker:verify": "./scripts/verify-docker-context.sh",
+    "docker:deploy": "./scripts/docker-deploy.sh",
+    "docker:up": "docker-compose -f docker-compose.prod.yml up -d",
+    "docker:down": "docker-compose -f docker-compose.prod.yml down",
+    "docker:logs": "docker-compose -f docker-compose.prod.yml logs -f",
+    "docker:status": "docker-compose -f docker-compose.prod.yml ps"
   },
   "dependencies": {
-    "@builder.io/dev-tools": "latest",
-    "@builder.io/react": "latest",
-    "@builder.io/sdk": "latest",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@google/genai": "^0.14.1",
     "@google/generative-ai": "^0.24.1",
-    "@hookform/resolvers": "^3.3.4",
-    "@modelcontextprotocol/sdk": "^1.13.2",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
     "@nestjs/cache-manager": "^3.0.1",
-    "@nestjs/common": "^11.1.1",
-    "@nestjs/core": "^11.1.1",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/common": "^11.1.3",
+    "@nestjs/core": "^11.1.3",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.1.1",
+    "@nestjs/platform-express": "^11.1.3",
     "@nestjs/platform-socket.io": "^11.1.3",
-    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^6.11.1",
     "@slack/webhook": "^7.0.5",
-    "@tanstack/react-query": "^5.71.10",
-    "@tanstack/react-query-devtools": "^5.71.10",
-    "bcryptjs": "^3.0.2",
-    "cache-manager": "^7.0.0",
+    "@types/node-fetch": "^2.6.12",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
+    "cache-manager": "^7.0.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "date-fns": "^2.30.0",
-    "dexie": "^3.2.4",
-    "dompurify": "^3.2.6",
+    "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "i18next": "^23.10.0",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.2.0",
-    "jest": "^30.0.4",
+    "helmet": "^8.0.0",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "node-abort-controller": "^3.1.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
-    "nostr-tools": "^2.13.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "prisma": "^6.11.1",
     "prom-client": "^15.1.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "^7.51.0",
-    "react-i18next": "^13.2.2",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^6.26.2",
-    "recharts": "^2.12.2",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2",
+    "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
-    "sonner": "^2.0.3",
-    "ts-jest": "^29.4.0",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
-    "use-debounce": "^10.0.5",
-    "winston": "^3.17.0",
-    "zod": "^3.22.4",
-    "zustand": "^5.0.3"
+    "typescript": "4.9.5",
+    "winston": "^3.15.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@nestjs/testing": "^11.1.1",
-    "@playwright/test": "^1.42.1",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@faker-js/faker": "8.4.1",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.1.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/lodash": "^4.17.20",
-    "@types/luxon": "^3.6.2",
-    "@types/node": "^24.0.10",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.15.33",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
-    "@types/pg": "^8.15.4",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/superagent": "^8.1.9",
-    "@types/supertest": "^6.0.3",
-    "@types/validator": "^13.15.2",
-    "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.35.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/pretty-format": "^2.1.9",
-    "es-module-lexer": "^1.7.0",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "glob": "^11.0.3",
-    "globals": "^15.15.0",
-    "happy-dom": "^17.4.7",
+    "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
+    "eslint": "^9.15.0",
+    "eslint-plugin-prettier": "^5.5.0",
+    "jest": "^29.7.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.4.2",
-    "rimraf": "^6.0.1",
-    "tsx": "^4.19.4",
-    "turbo": "^2.5.4",
-    "typescript": "^4.9.5",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-plugin-pwa": "^1.0.1"
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "tsconfig-paths": "^4.2.0",
+    "turbo": "^2.5.4"
   },
   "peerDependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1"
+  },
+  "prisma": {
+    "seed": "ts-node backend/prisma/seed-dev.ts",
+    "schema": "backend/prisma/schema.prisma"
   }
 }
