--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -1,5 +1,5 @@
-  NODE_ENV=development
-  DATABASE_SiURL="postgresql://coomunity_db_prod_user:JSgrjv96urOpJkMyvHqZWm14dgHEMUAH@dpg-d1fpqd2li9vc739qrtf0-a/coomunity_db_prod"
+  NODE_ENV=production
+  DATABASE_URL="postgresql://coomunity_db_prod_user:JSgrjv96urOpJkMyvHqZWm14dgHEMUAH@dpg-d1fpqd2li9vc739qrtf0-a.oregon-postgres.render.com/coomunity_db_prod?sslmode=require&connect_timeout=60&pool_timeout=60&statement_timeout=60000"
   JWT_SECRET="cop-2025-july03"
   REDIS_URL="redis://red-d1fjqp2li9vc739kf560:6379"
   ALLOWED_ORIGINS=https://superapp-unified-iota.vercel.app/
