🔧 ACTUALIZACIÓN DE CONFIGURACIÓN DE RENDER Y VALIDACIÓN POST-DEPLOY
✅ Cambios implementados:
- Renombrado el servicio de backend a "god-backend" en `render.yaml`.
- Añadidos nuevos parámetros de configuración para Prisma en `render.yaml`.
- Documentación de validación post-deploy exitosa en `RENDER_DEPLOY_README.txt`, incluyendo verificación de salud, autenticación y logs de despliegue.

🎯 Justificación:
- Estas modificaciones aseguran que el backend esté correctamente configurado y validado en producción, mejorando la estabilidad y la trazabilidad del despliegue.

🚀 Listo para continuar con el desarrollo y la implementación del proyecto CoomÜnity.

--- a/render.yaml
+++ b/render.yaml
@@ -13,15 +13,15 @@ services:
     maxmemoryPolicy: allkeys-lru
 
   # Backend - NestJS (Docker, recomendado)
+  # ✅ OPERATIVO EN PRODUCCIÓN: https://god-backend-j4b6.onrender.com
   - type: web
-    name: beforenostr-backend
+    name: god-backend
     plan: free
     runtime: docker
     repo: https://github.com/kvn3toj/beforenostr
     dockerContext: .
     dockerfilePath: ./Dockerfile.backend
-    healthCheck:
-      path: /health
+    healthCheckPath: /health
     envVars:
       - key: PORT
         value: 3002
@@ -35,6 +35,10 @@ services:
         generateValue: true
       - key: NODE_ENV
         value: production
+      - key: PRISMA_QUERY_ENGINE_LIBRARY_TIMEOUT
+        value: 60000
+      - key: PRISMA_CLIENT_ENGINE_TYPE
+        value: library
     buildFilter:
       paths:
         - backend/**
