feat(security): Implement admin password reset system
- Modified seed.ts to use upsert for password updates
- New secure password for admin account
- Dedicated reset script and npm commands
- Comprehensive documentation and troubleshooting guide
- Production-ready password reset mechanism

--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,9 @@
     "db:reset": "prisma migrate reset --force",
     "db:seed": "npx prisma db seed",
     "db:seed:dev": "ts-node prisma/seed-dev.ts",
+    "db:seed:prod": "ts-node src/prisma/seed.ts",
     "db:studio": "prisma studio",
+    "db:reset-admin": "node scripts/reset-admin-password.js",
     "migration:generate": "npx prisma migrate dev",
     "migration:deploy": "npx prisma migrate deploy",
     "postinstall": "prisma generate",
