🔧 CRITICAL FIX: Correct seed script path in monorepo package.json
- Fixed prisma.seed path from seed-dev.ts to seed.ts
- This resolves the @faker-js/faker dependency error in production
- Production seed script is already robust and faker-free
- Enables successful database seeding in production environment

Victory is imminent! 🏆

--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "react-dom": "18.3.1"
   },
   "prisma": {
-    "seed": "ts-node backend/prisma/seed-dev.ts",
+    "seed": "ts-node backend/src/prisma/seed.ts",
     "schema": "backend/prisma/schema.prisma"
   }
 }
