fix(docker): Include force-migrations.sh script in Docker image and correct paths
🏛️ INCLUSIÓN DEL HERALDO - Marketplace Migration Fix

CAMBIOS CRÍTICOS:
- Added force-migrations.sh to Dockerfile COPY instructions
- Corrected Prisma schema paths in force-migrations.sh (./backend/prisma/schema.prisma)
- Fixed application paths in start-production.sh (./backend/dist/main.js)
- Added chmod +x permissions for force-migrations.sh in Docker build

RESOLUCIÓN:
- Eliminates 'No such file or directory' error for force-migrations.sh
- Ensures marketplace_items table migrations are properly applied in production
- Establishes robust migration retry logic with proper Docker container paths

ARQUITECTURA:
- force-migrations.sh: Heraldo de migraciones con 5 reintentos
- start-production.sh: Orquestador principal de producción
- Dockerfile: Manifiesto completo de construcción con todos los scripts

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -63,6 +63,10 @@ RUN npm install --omit=dev --legacy-peer-deps --ignore-scripts
 COPY backend/start-production.sh ./start-production.sh
 RUN chmod +x ./start-production.sh
 
+# Copy migration script
+COPY backend/force-migrations.sh ./force-migrations.sh
+RUN chmod +x ./force-migrations.sh
+
 # Expose port
 EXPOSE 3002
 
