feat(deploy): ATLAS - Forzar nuevo build con migración 20250707005901
- Migración creada después del último build exitoso en Render
- Timestamp de migración: Jul 6 19:59:01 2025
- Timestamp de build anterior: Jul 6 17:04:31 2025
- Solución: Forzar nuevo build para incluir migración faltante
- El Dockerfile ya copia correctamente prisma/, solo necesitamos nuevo build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -72,3 +72,6 @@ EXPOSE 3002
 
 # Start the application
 CMD ["./start-production.sh"]
+
+# ATLAS MISSION: Forzar nuevo build con migración 20250707005901_add_missing_unique_constraints
+# Timestamp: Jul 6 20:45:00 2025 - Migración creada después del último build exitoso
